{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 32,
  "lineage": "1aaf05ce-5836-40da-deb9-b07b99d622de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "securecalc_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1e769742d1cfb49",
            "arn": "arn:aws:ec2:us-east-1:119408973615:instance/i-02890ad683b99a15b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "securecalc-lab-ec2-profile",
            "id": "i-02890ad683b99a15b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058b49e6d609dd22e",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:119408973615:key/d6982d5d-ea5b-4dfc-b521-aa10d71d5e42",
                "tags_all": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "SecureCalcLab"
                },
                "throughput": 125,
                "volume_id": "vol-0c877b0341a192543",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098f450bb98416ff3",
            "tags": {
              "Name": "securecalc-lab-ec2"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-ec2",
              "Project": "SecureCalcLab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cf5dfa76167b526"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_sg",
            "data.aws_ami.amazon_linux_2023",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:119408973615:loadbalancer/app/securecalc-lab-alb/738c47c71f361ef1",
            "arn_suffix": "app/securecalc-lab-alb/738c47c71f361ef1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "securecalc-lab-alb-661141501.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:119408973615:loadbalancer/app/securecalc-lab-alb/738c47c71f361ef1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "securecalc-lab-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-091763debdb1a3940"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8af3a10dc564ed9"
              },
              {
                "subnet_id": "subnet-0cfc667e928705b0f"
              }
            ],
            "subnets": [
              "subnet-0b8af3a10dc564ed9",
              "subnet-0cfc667e928705b0f"
            ],
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Project": "SecureCalcLab"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:119408973615:listener/app/securecalc-lab-alb/738c47c71f361ef1/4ade85e433068e9b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:119408973615:targetgroup/securecalc-lab-tg/cfd18a1d35c9e50e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:119408973615:listener/app/securecalc-lab-alb/738c47c71f361ef1/4ade85e433068e9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:119408973615:loadbalancer/app/securecalc-lab-alb/738c47c71f361ef1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Project": "SecureCalcLab"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:119408973615:targetgroup/securecalc-lab-tg/cfd18a1d35c9e50e",
            "arn_suffix": "targetgroup/securecalc-lab-tg/cfd18a1d35c9e50e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:119408973615:targetgroup/securecalc-lab-tg/cfd18a1d35c9e50e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:119408973615:loadbalancer/app/securecalc-lab-alb/738c47c71f361ef1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "securecalc-lab-tg",
            "port": 8501,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Project": "SecureCalcLab"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:security-group/sg-091763debdb1a3940",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091763debdb1a3940",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.211.63.139/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "securecalc-lab-alb-sg",
            "name_prefix": "",
            "owner_id": "119408973615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securecalc-lab-alb-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-alb-sg",
              "Project": "SecureCalcLab"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:security-group/sg-01cf5dfa76167b526",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cf5dfa76167b526",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "securecalc-lab-ec2-sg",
            "name_prefix": "",
            "owner_id": "119408973615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securecalc-lab-ec2-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-ec2-sg",
              "Project": "SecureCalcLab"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:network-acl/acl-09d51b7cd3ad6b8f2",
            "default_network_acl_id": "acl-09d51b7cd3ad6b8f2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09d51b7cd3ad6b8f2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "119408973615",
            "subnet_ids": [
              "subnet-01291e269e96d6a3b",
              "subnet-098f450bb98416ff3",
              "subnet-0b8af3a10dc564ed9",
              "subnet-0cfc667e928705b0f"
            ],
            "tags": {
              "Name": "securecalc-lab-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-default",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:route-table/rtb-02c575f40e0fd932d",
            "default_route_table_id": "rtb-02c575f40e0fd932d",
            "id": "rtb-02c575f40e0fd932d",
            "owner_id": "119408973615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "securecalc-lab-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-default",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:security-group/sg-09eef7acedfba5515",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09eef7acedfba5515",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "119408973615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securecalc-lab-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-default",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05eedca19d6eba1f1",
            "arn": "arn:aws:ec2:us-east-1:119408973615:elastic-ip/eipalloc-05eedca19d6eba1f1",
            "association_id": "eipassoc-0298f3ceff3fe4413",
            "domain": "vpc",
            "id": "eipalloc-05eedca19d6eba1f1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c83a5790a84a45f5",
            "private_dns": "ip-10-0-101-87.ec2.internal",
            "private_ip": "10.0.101.87",
            "public_dns": "ec2-52-21-194-204.compute-1.amazonaws.com",
            "public_ip": "52.21.194.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "securecalc-lab-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-us-east-1a",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:internet-gateway/igw-048e3c9d9d4bbdfce",
            "id": "igw-048e3c9d9d4bbdfce",
            "owner_id": "119408973615",
            "tags": {
              "Name": "securecalc-lab-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05eedca19d6eba1f1",
            "association_id": "eipassoc-0298f3ceff3fe4413",
            "connectivity_type": "public",
            "id": "nat-0709c4b0c406c0d18",
            "network_interface_id": "eni-0c83a5790a84a45f5",
            "private_ip": "10.0.101.87",
            "public_ip": "52.21.194.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8af3a10dc564ed9",
            "tags": {
              "Name": "securecalc-lab-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-us-east-1a",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8032099924df6111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0709c4b0c406c0d18",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8032099924df611",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048e3c9d9d4bbdfce",
            "id": "r-rtb-09316201263c1f0c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09316201263c1f0c5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:route-table/rtb-0f8032099924df611",
            "id": "rtb-0f8032099924df611",
            "owner_id": "119408973615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0709c4b0c406c0d18",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "securecalc-lab-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-private",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:route-table/rtb-09316201263c1f0c5",
            "id": "rtb-09316201263c1f0c5",
            "owner_id": "119408973615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048e3c9d9d4bbdfce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "securecalc-lab-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-public",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01830ea54bc807d78",
            "route_table_id": "rtb-0f8032099924df611",
            "subnet_id": "subnet-098f450bb98416ff3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5672a8b15af08d1",
            "route_table_id": "rtb-0f8032099924df611",
            "subnet_id": "subnet-01291e269e96d6a3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065bc918b0e9ca3c7",
            "route_table_id": "rtb-09316201263c1f0c5",
            "subnet_id": "subnet-0b8af3a10dc564ed9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0810e0d59d7e318cd",
            "route_table_id": "rtb-09316201263c1f0c5",
            "subnet_id": "subnet-0cfc667e928705b0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:subnet/subnet-098f450bb98416ff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098f450bb98416ff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119408973615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "securecalc-lab-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-private-us-east-1a",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:subnet/subnet-01291e269e96d6a3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01291e269e96d6a3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119408973615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "securecalc-lab-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-private-us-east-1b",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:subnet/subnet-0b8af3a10dc564ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8af3a10dc564ed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119408973615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "securecalc-lab-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-public-us-east-1a",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:subnet/subnet-0cfc667e928705b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfc667e928705b0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119408973615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "securecalc-lab-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc-public-us-east-1b",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048a9f9f48e2fff95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119408973615:vpc/vpc-048a9f9f48e2fff95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d51b7cd3ad6b8f2",
            "default_route_table_id": "rtb-02c575f40e0fd932d",
            "default_security_group_id": "sg-09eef7acedfba5515",
            "dhcp_options_id": "dopt-0dca46dba41180a00",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048a9f9f48e2fff95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c575f40e0fd932d",
            "owner_id": "119408973615",
            "tags": {
              "Name": "securecalc-lab-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "securecalc-lab-vpc",
              "Project": "SecureCalcLab",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}